<resources>
    <string name="app_name">Album Maker</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot"> <u>Quên mật khẩu ?</u></string>
    <string name="login">Đăng nhập</string>
    <string name="album_maker">Album Maker</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="company">Công ty</string>
    <string name="setting">Cài đặt</string>
    <string name="profile">Hồ sơ</string>
    <string name="notifycation">Thông báo</string>
    <string name="guide_faq">Hướng dẫn &amp; FAQ</string>
    <string name="version">Phiên bản</string>
    <string name="color">Màu chủ đề</string>
    <string name="company_name">Tên Công Ty</string>
    <string name="company_code">Mã Công Ty</string>
    <string name="address">Địa chỉ</string>
    <string name="staff_number">SỐ nhân viên</string>
    <string name="sum_weight">Tổng lưu lượng</string>
    <string name="contract_name">Tên hợp đồng</string>
    <string name="time_of_contract">Thời hạn hợp đồng</string>
    <string name="person_in_charge">Người phụ trách:</string>
    <string name="contract_state">Trạng thái hợp đồng</string>
    <string name="view_all_contract">Xem tất cả hợp đồng</string>
    <string name="size_image">Kích cỡ ảnh</string>
    <string name="language">Ngôn ngữ</string>
    <string name="comment_with_voice">Bình luận bằng giọn nói</string>
    <string name="login_with_fingerprint">Đăng nhập bằng vân tay</string>
    <string name="save">Lưu các thay đổi</string>
    <string name="logout">Đăng xuất</string>
    <string name="staff_code">Mã nhân viên</string>
    <string name="fullname">Họ và tên</string>
    <string name="zoom">Phòng ban</string>
    <string name="local">Vị trí</string>
    <string name="permission">Quyền sử đụng</string>
    <string name="repassword">Đổi mật khẩu</string>
    <string name="search">Tìm kiếm</string>
    <string name="album_detail">Chi tiết Album</string>
    <string name="address_1">住所 (Address):</string>
    <string name="full_date">FullDate</string>
    <string name="sort_date">Sort Date</string>
    <string name="date_time">Date Time</string>
    <string name="date_created">Ngày Tạo</string>
    <string name="album">Loại Album</string>
    <string name="comment">Bình luận</string>
    <string name="image">Hình ảnh</string>
    <string name="video">Video</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="japan">日本語</string>
    <string name="english">Tiếng Anh</string>
</resources>