<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment.FragmentCompany">
    <Toolbar
        android:background="@color/purple_700"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="24dp"
            android:paddingHorizontal="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingHorizontal="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:src="@drawable/nai_sung_tam"
                android:layout_width="200dp"
                android:layout_height="150dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/company_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/staff_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/sum_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/contract_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/time_of_contract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/person_in_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/contract_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:text="@string/view_all_contract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="#157BD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_marginBottom="50dp"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>